# hash_bench

./: Cargo.toml
src/: gen.rs  main.rs
