[package]
name = "hash_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
ahash = "0.8.3"
seahash = "4.1.0"
metrohash = "1.0.6"
rustc-hash = "1.1.0"
wyhash = "0.5.0"
xxhash-rust = { version = "0.8.7", features = ["xxh64"] }
highway = "1.1.0"
fasthash = "0.4.0"
fnv = "1.0.7"
siphasher = "1.0.0"
wyhash2 = "0.2.1"
